@@ -23,7 +23,7 @@ class JediTaskSpec(object):
         'mergeWalltime','mergeWalltimeUnit','throttledTime','numThrottled',
         'mergeCoreCount','goal','assessmentTime','cpuTime','cpuTimeUnit',
         'cpuEfficiency','baseWalltime','nucleus','baseRamCount',
-        'ttcRequested', 'ttcPredicted', 'ttcPredictionDate'
+        'ttcRequested', 'ttcPredicted', 'ttcPredictionDate','rescueTime'
         )
     # attributes which have 0 by default
     _zeroAttrs = ()
