@@ -1,5 +1,8 @@
 Release Notes
 
+* 7/5/2016
+  * added rescueUnLockedTasksWithPicked
+
 * 7/4/2016
   * changed ToBeProcessed to check done datasets as well
 
